fix wrong order of column and row